--- a/Yolo Kitchen/yolokitchen.css
+++ b/Yolo Kitchen/yolokitchen.css
@@ -2,54 +2,53 @@ header, section, footer, aside, nav, article, figure, figcaption{
     display: block;
 }
 body{
-    color: #666666;
-    background-color: #f9f8f6;
-    background-image: url(../img/header.webp);
+    color: #74571f;
+    background-image: url(img/dark-wood.jpg);
     background-position: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
     line-height: 1.4em;
-    margin: 00px;
+    margin: 0px;
 }
 .wrapper{
     width: 940px;
-    margin: 2px auto 2px auto;
-    border: 2px solid #371477;
-    background-color: #ffffff;
-}
+    margin: 20px auto 20px auto;
+    border: 2px solid #000;
+    background-color: #fff7f7;
+} 
 header{
     height: 160px;
-    background-image: url(img/header.webp);
+    background-image: url(img/header.jpg);
 }
 h1{
     text-indent: -9999px;
-    width: 948px;
+    width: 940px;
     height: 130px;
     margin: 0px;
 }
 nav, footer{
     clear: both;
-    color: #fff;
-    background-color: #aaaca8;
-    height: 38px;
+    color: #ad5252;
+    background-color: #aeaca8;
+    height: 30px;
 }
 nav ul{
     margin: 0px;
-    padding: 10px 20px 30px 30px;
+    padding: 5px 0px 5px 30px;
 }
 nav li{
     display: inline;
     margin-right: 40px;
 }
 nav li a{
-    color: #b37070;
+    color: #3f1010;
 }
 nav li a:hover, nav li a.current{
-    color: #c141c5;
+    color: #000000;
 }
 section.courses{
     float: left;
     width: 659px;
-    border-right: 1px solid #c49292;
+    border-right: 1px solid #853535;
 }
 article{
     clear: both;
@@ -57,46 +56,54 @@ article{
     width: 100%;
 }
 hgroup{
-    margin-left: 40px;
+    margin-top: 40px;
 }
 figure{
     float: left;
     width: 290px;
     height: 220px;
-    padding: 9px;
-    margin: 29px;
+    padding: 5px;
+    margin: 20px;
     border: 1px solid #eee;
 }
 figcaption{
-    font-size: 20px;
+    font-size: 98%;
     text-align: left;
 }
 aside{
     width: 230px;
     float: left;
-    padding: 0px 0px 9px 20px;
+    padding: 0px 0px 0px 20px;
 }
 aside section a{
     display: block;
     padding: 10px;
-    border-bottom: 1px solid rgb(43, 104, 184)
+    border-bottom: 1px solid #854f4f;
 }
 aside section a:hover{
-    color: #16a82a;
-    background-color: #ffffff;
+    color: #de6581;
+    text-decoration: none;
 }
 a{
-    color: #3f2291;
-    text-decoration: khaki;
+    color: #be7988;
+    text-decoration: none;
 }
 h1, h2, h3{
-    font-weight: initial;
+    font-weight: normal;
 }
 h2{
-    margin: 10px 0px 0px 0px;
-    padding: 10px;
+    margin: 10px 0px 5px 0px;
+    padding: 0px;
 }
 h3{
-    margin: 10px 0px 10px 0px;
-    color: #1a0329;
+    margin: 0px 0px 10px 0px;
+    color: #a5435a;
+}
+aside h2{
+    padding: 30px 0px 10px 0px;
+    color: #de6581;
+}
+footer{
+    font-size: 80%;
+    padding: 7px 0px 0px 20px;
 }
